overflow-y body fix  in mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,9 @@ body {
   .loading-animation {
     display: none !important;
   }
+  body {
+    overflow-y: visible;
+  }
 }
 
 /*! ---------------------------------------------------------- custom grid system for responsive ----------------------------------------------------------------------------- */
